--- a/docs/team/wilfredbtan.adoc
+++ b/docs/team/wilfredbtan.adoc
@@ -51,7 +51,7 @@ of many of the other features.
 
 ** *What it does*: After entering quiz mode, the driver parses user input, determines whether the answer is correct and displays the next question. At the end of each level and the entire quiz, the user is shown his/her score and given the choice to continue (i.e. proceed to the next level or restart) or exit the quiz.
 ** *Justification*: This essential feature is the core of the application and allows other features to be built upon it. Furthermore, it significantly improves the product as it adds the element of interaction to the application.
-** *Highlights*: This enhancement required the deep understanding of the entire project structure as it can be considered the nervous system that connects the application from UI to Storage. Other functionality such as answering MCQs, True & False or Short-Answer Questions (SAQ) were built upon this feature.
+** *Highlights*: This enhancement required the deep understanding of the entire project structure as it can be considered the nervous system that connects the application from UI to Storage. Other functionality such as answering MCQs, True & False or Short-Answer Questions (SAQ) were built upon this feature. This feature was also tested using automated GUI tests.
 ** Credits: Code for the GUI display was adapted from Address Book – Level 3 and the structure for GUI tests was adapted from Address Book - Level 4.
 
 * *Minor enhancements*:
@@ -69,17 +69,16 @@ of many of the other features.
 *** Managed issues and resolved the main bulk of the post Mock PE issues.
 
 ** Enhancements to existing features:
-*** Wrote additional GUI tests to increase coverage from 50% to 72% (PR link:{pullUrl}/158[#158], link:{pullUrl}/161[#161])
+*** Wrote additional GUI tests to increase coverage from 50% to 75% (PR link:{pullUrl}/158[#158], link:{pullUrl}/161[#161], link:{pullUrl}/163[#163])
 *** Updated the GUI colour scheme and added aesthetic artifacts such as level label (PR link:{pullUrl}/98[#98], link:{pullUrl}/148[#148])
-*** Created skeleton class for `AnswerableBuilder` using Java Generics and the builder class design so that other teammates will be able to build upon it easily (PR link:{pullUrl}/148[#148], link:{pullUrl}/149[#149])
-*** Adapted CommandResult to follow the builder design pattern .
+*** Created skeleton class for `AnswerableBuilder` using Java Generics and builder design pattern so that my teammates will be able to build upon it easily (PR link:{pullUrl}/148[#148], link:{pullUrl}/149[#149])
 
 ** Documentation:
 *** Created skeleton sequence and activity diagrams for the team to reuse so that the DG can have a more congruent look.
 
 ** Community:
-*** PRs reviewed: (link:{mainPullUrl}/14[example])
-*** Contributed to forum discussions (link:{issuesUrl}/60[example])
+*** Reviewed this link:{mainPullUrl}/14[PR].
+*** Helped a fellow student in this link:{issuesUrl}/60[forum post].
 
 == Contributions to the User Guide
 
